# horsey-heresy-list-builder

./: .gitignore  BCP_SCRAPING_NOTES.md  CLAUDE.md  COLLECTION_BUILDER.md  CURRENT_STATUS.md  DEPLOYMENT.md  DIGITALOCEAN_DEPLOYMENT.md  IMPLEMENTATION.md  PHASE2_COMPLETE.md  PHASE3_PROGRESS.md  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_WEB.md  README.md  TODAY.md  add_user_collection.py  debug_cat_map.py  debug_categories.py  fix_collection.py  pyproject.toml  requirements.txt  test_parser.py  test_parser2.py  test_xpath.py
.claude/: settings.json
.claude/hooks/: pre-commit-lint.sh
.github/workflows/: ci.yml
api/: Dockerfile  README.md  main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: deploy_digitalocean.sh
src/: __init__.py  config.py
src/analytics/: __init__.py  combo_detector.py  point_distribution.py  reports.py  unit_popularity.py
src/bsdata/: __init__.py  catalogue_cache.py  catalogue_loader.py  category_mapping.py  composition_validator.py  detachment_loader.py  foc_validator.py  modifier_evaluator.py  parser.py  points_calculator.py  repository.py  upgrade_extractor.py
src/builder/: __init__.py  collection_builder.py
src/cli/: bsdata_menu.py  collection_menu.py  main.py  streamlined.py
src/gamesystems/: base.py  (+1 more)
tests/: conftest.py  create_demo_data.py  debug_bcp.py  debug_bcp_filters.py  demo_collection.py  test_api.py  test_production_audit.py  test_sample_data.py  test_webapp.py
web/: README.md  requirements.txt  streamlit_app.py
(+96 files in other folders)
